Validacoes senha e email

--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
     </div>
     <footer class="navbar-container fixed-bottom">
         <nav class="nav nav-pills flex-column flex-sm-row ">
-            <a class="flex-sm-fill text-sm-center nav-link " href="https://github.com/NandaMagal" target="_blank">Fernanda</a>
-            <a class="flex-sm-fill text-sm-center nav-link" href="https://github.com/helomeister" target="_blank">Heloísa</a>
-            <a class="flex-sm-fill text-sm-center nav-link" href="https://github.com/mpederiva" target="_blank">Marta</a>
+            <a class="flex-sm-fill text-sm-center nav-link " href="https://github.com/NandaMagal" target="blank">Fernanda</a>
+            <a class="flex-sm-fill text-sm-center nav-link" href="https://github.com/helomeister" target="blank">Heloísa</a>
+            <a class="flex-sm-fill text-sm-center nav-link" href="https://github.com/mpederiva" target="blank">Marta</a>
         </nav>
     </footer>
+    <!-- 
     <script src="/scripts/API/post.js "></script>
     <script src="/scripts/API/get.js "></script>
     <script src="/scripts/API/put.js "></script>
     <script src="/scripts/API/delete.js "></script>
+    -->
     <script src="/scripts/validacoes/utils.js "></script>
     <script src="/scripts/login/index.js "></script>
-    <script src="/scripts/login/signup.js "></script>
-    <script src="/scripts/login/tarefas.js"></script>
 </body>
 
 </html>
