--- a/signup.html
+++ b/signup.html
@@ -52,7 +52,7 @@
 
                 <label>
                     Senha:
-                    <input id="inpuPassword"  type="password" required>
+                    <input id="inputPassword"  type="password" required>
                     <small id="passwordValidacao"></small>
             </label>
 
@@ -64,8 +64,6 @@
 
                 <button id="botaoCadastro" type="submit">Criar conta</button>
 
-                <button id="validarSenha" type="submit">Validar Senha</button>
-                <h3 id="resposta">
             </form>
 
             <div class="ingressar">
@@ -74,19 +72,21 @@
         </div>
 
 
-        <footer class="navbar-container fixed-bottom" ">
+        <footer class="navbar-container fixed-bottom">
             <nav class="nav nav-pills flex-column flex-sm-row ">
-                <a class="flex-sm-fill text-sm-center nav-link "href="https://github.com/NandaMagal "target="_blank ">Fernanda</a>
-                <a class="flex-sm-fill text-sm-center nav-link "href="https://github.com/helomeister "target="blank ">Heloísa</a>
-                <a class="flex-sm-fill text-sm-center nav-link "href="https://github.com/mpederiva "target="blank ">Marta</a>
+                <a class="flex-sm-fill text-sm-center nav-link " href="https://github.com/NandaMagal " target="blank ">Fernanda</a>
+                <a class="flex-sm-fill text-sm-center nav-link " href="https://github.com/helomeister " target="blank ">Heloísa</a>
+                <a class="flex-sm-fill text-sm-center nav-link " href="https://github.com/mpederiva " target="blank ">Marta</a>
             </nav>
-        </footer> 
-        <script src="/scripts/API/post.js "></script>
-        <script src="/scripts/API/get.js "></script>
-        <script src="/scripts/API/put.js "></script>
-        <script src="/scripts/API/delete.js "></script>
-        <script src="/scripts/validacoes/utils.js "></script>
-        <script src="/scripts/login/singup.js "></script>
-        <script src="/scripts/tarefas/tarefas.js "></script>
-    </body>
+        </footer>
+        <!-- 
+    <script src="/scripts/API/post.js "></script>
+    <script src="/scripts/API/get.js "></script>
+    <script src="/scripts/API/put.js "></script>
+    <script src="/scripts/API/delete.js "></script>
+    -->
+        <script src="./scripts/validacoes/utils.js "></script>
+        <script src="./scripts/login/singup.js"></script>
+</body>
+
 </html>
