--- a/signup.html
+++ b/signup.html
@@ -79,14 +79,10 @@
                 <a class="flex-sm-fill text-sm-center nav-link " href="https://github.com/mpederiva " target="blank ">Marta</a>
             </nav>
         </footer>
-        <!-- 
-    <script src="/scripts/API/post.js "></script>
-    <script src="/scripts/API/get.js "></script>
-    <script src="/scripts/API/put.js "></script>
-    <script src="/scripts/API/delete.js "></script>
-    -->
+
         <script src="./scripts/validacoes/utils.js "></script>
-        <script src="./scripts/login/singup.js"></script>
+        <script src="./scripts/login/signup.js "></script>
+
 </body>
 
 </html>
