--- a/signup.html
+++ b/signup.html
@@ -81,7 +81,8 @@
         </footer>
 
         <script src="./scripts/validacoes/utils.js "></script>
-        <script src="./scripts/login/signup.js "></script>
+        <script src="./scripts/API/funcoes.js"></script>
+        <script src=" ./scripts/login/signup.js "></script>
 
 </body>
 
