--- a/tarefas.html
+++ b/tarefas.html
@@ -23,115 +23,112 @@
             <a class="navbar-brand" href="#">Tarefas</a>
             <ul class="form-inline" id="user-info">
                 <li class="navbar-nav mr-auto mt-2 mt-lg-0">
-                    <span class="navbar-text">
+                    <span id="nomeUsuarioEmTarefas" class=" navbar-text ">
                         Nome usuário
                     </span>
                 </li>
-                <li class="nav-item">
-                    <a class="user-image"></a>
+                <li class="nav-item ">
+                    <a class="user-image "></a>
                 </li>
-                <li class="nav-item">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Finalizar sessão</button>
+                <li class="nav-item ">
+                    <button class="btn btn-outline-success my-2 my-sm-0 " type="submit ">Finalizar sessão</button>
                 </li>
             </ul>
         </nav>
     </header>
 
-    <form class="nova-tarefa">
+    <form class="nova-tarefa ">
         <div class="not-done "></div>
-        <input id="novaTarefa" type="text" placeholder="Nova tarefa">
-        <button id="Task" type="submit">
-            <img src="./assets/plus.png" alt="Adicionar uma nova tarefa">
+        <input id="novaTarefa " type="text " placeholder="Nova tarefa ">
+        <button id="Task " type="submit ">
+            <img src="./assets/plus.png " alt="Adicionar uma nova tarefa ">
         </button>
     </form>
 
     <ul class="tarefas-pendentes">
-        <div id="skeleton">
+        <div id="skeleton ">
             <li class="tarefa">
                 <div class="idTarefa"></div>
-                <div class="descricao">
-                    <p class="nomeTarefa">Nova tarefa</p>
-                    <p class="timestamp">Criada em: 18/04/22</p>
+                <div class="descricao ">
+                    <p class="nomeTarefa ">Nova tarefa</p>
+                    <p class="timestamp ">Criada em: 18/04/22</p>
                 </div>
             </li>
-            <li class="tarefa">
-                <div class="idTarefa"></div>
-                <div class="descricao">
-                    <p class="nomeTarefa">Nova tarefa</p>
-                    <p class="timestamp">Criada em: 19/04/22</p>
+            <li class="tarefa ">
+                <div class="idTarefa "></div>
+                <div class="descricao ">
+                    <p class="nomeTarefa ">Nova tarefa</p>
+                    <p class="timestamp ">Criada em: 19/04/22</p>
                 </div>
             </li>
-            <li class="tarefa">
-                <div class="idTarefa"></div>
-                <div class="descricao">
-                    <p class="nomeTarefa">Nova tarefa</p>
-                    <p class="timestamp">Criada em: 20/04/22</p>
+            <li class="tarefa ">
+                <div class="idTarefa "></div>
+                <div class="descricao ">
+                    <p class="nomeTarefa ">Nova tarefa</p>
+                    <p class="timestamp ">Criada em: 20/04/22</p>
                 </div>
             </li>
         </div>
     </ul>
 
-    <h2 class="titulo-terminadas">Tarefas Concluídas</h2>
-    <ul class="tarefas-terminadas">
-        <li class="tarefa">
-            <div class="not-done"></div>
-            <div class="descricao">
-                <p class="nome">Estudar API</p>
-                <p class="timestamp">Criada: 14/04/2022</p>
+    <h2 class="titulo-terminadas ">Tarefas Concluídas</h2>
+    <ul class="tarefas-terminadas ">
+        <li class="tarefa ">
+            <div class="not-done "></div>
+            <div class="descricao ">
+                <p class="nome ">Estudar API</p>
+                <p class="timestamp ">Criada: 14/04/2022</p>
             </div>
         </li>
-        <li class="tarefa">
-            <div class="not-done"></div>
-            <div class="descricao">
-                <p class="nome">Passear</p>
-                <p class="timestamp">Criada: 15/04/2022</p>
+        <li class="tarefa ">
+            <div class="not-done "></div>
+            <div class="descricao ">
+                <p class="nome ">Passear</p>
+                <p class="timestamp ">Criada: 15/04/2022</p>
             </div>
         </li>
-        <li class="tarefa">
-            <div class="not-done"></div>
-            <div class="descricao">
-                <p class="nome">Tocar Violão</p>
-                <p class="timestamp">Criada: 16/04/2022</p>
+        <li class="tarefa ">
+            <div class="not-done "></div>
+            <div class="descricao ">
+                <p class="nome ">Tocar Violão</p>
+                <p class="timestamp ">Criada: 16/04/2022</p>
             </div>
         </li>
-        <li class="tarefa">
-            <div class="not-done"></div>
-            <div class="descricao">
-                <p class="nome">Apresentação Front2</p>
-                <p class="timestamp">Criada: 22/04/2022</p>
+        <li class="tarefa ">
+            <div class="not-done "></div>
+            <div class="descricao ">
+                <p class="nome ">Apresentação Front2</p>
+                <p class="timestamp ">Criada: 22/04/2022</p>
             </div>
         </li>
     </ul>
 
     <!--Não entendi o propósito dessa categoria
-    <form class="novata">
-        <li class=" tarefa">
-            <div class="done"></div>
-            <div class="descricao">
-                <p class="nome">${tarefa.descricao}</p>
+    <form class="novata ">
+        <li class=" tarefa ">
+            <div class="done "></div>
+            <div class="descricao ">
+                <p class="nome ">${tarefa.descricao}</p>
                 <button><i id="${tarefa.id} " class="fas fa-undo-alt change "></i></button>
                 <button><i id="${tarefa.id} " class="far fa-trash-alt "></i></button>
             </div>
         </li>
     </form> -->
 
-    <footer class="navbar-container fixed-bottom">
-        <nav class="nav nav-pills flex-column flex-sm-row">
-            <a class="flex-sm-fill text-sm-center nav-link" href="https://github.com/NandaMagal" target="_blank">Fernanda</a>
-            <a class="flex-sm-fill text-sm-center nav-link" href="https://github.com/helomeister" target="blank">Heloísa</a>
-            <a class="flex-sm-fill text-sm-center nav-link" href="https://github.com/mpederiva" target="blank">Marta</a>
+    <footer class="navbar-container fixed-bottom ">
+        <nav class="nav nav-pills flex-column flex-sm-row ">
+            <a class="flex-sm-fill text-sm-center nav-link " href="https://github.com/NandaMagal " target="_blank ">Fernanda</a>
+            <a class="flex-sm-fill text-sm-center nav-link " href="https://github.com/helomeister " target="blank ">Heloísa</a>
+            <a class="flex-sm-fill text-sm-center nav-link " href="https://github.com/mpederiva " target="blank ">Marta</a>
         </nav>
     </footer>
 
     <!-- CDN example (unpkg) -->
-    <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js "></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js "></script>
     <!-- Novas tarefas -->
-    <script src="./scripts/API/post.js"></script>
-    <script src="./scripts/API/get.js"></script>
-    <script src="./scripts/API/put.js"></script>
-    <script src="./scripts/API/delete.js"></script>
-    <script src="./scripts/tarefas/tarefas.js"></script>
+    <script src="./scripts/API/funcoes.js "></script>
+    <script src="./scripts/tarefas/tarefas.js "></script>
 </body>
 
 </html>
