--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
     </footer>
 
     <script src="./scripts/API/funcoes.js "></script>
-    <script src="/scripts/validacoes/utils.js "></script>
-    <script src="/scripts/login/index.js "></script>
+    <script src="./scripts/validacoes/utils.js "></script>
+    <script src="./scripts/login/index.js "></script>
 </body>
 
 </html>
