Inclusao de Modificacao de tarefas e convesão da data

--- a/tarefas.html
+++ b/tarefas.html
@@ -57,7 +57,7 @@
 
     <footer class="navbar-container fixed-bottom">
         <nav class="nav nav-pills flex-column flex-sm-row ">
-            <a class="flex-sm-fill text-sm-center nav-link " href="https://github.com/NandaMagal " target="_blank ">Fernanda</a>
+            <a class="flex-sm-fill text-sm-center nav-link " href="https://github.com/NandaMagal " target="blank ">Fernanda</a>
             <a class="flex-sm-fill text-sm-center nav-link " href="https://github.com/helomeister " target="blank ">Heloísa</a>
             <a class="flex-sm-fill text-sm-center nav-link " href="https://github.com/mpederiva " target="blank ">Marta</a>
         </nav>
